--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     <header>
         <nav class="nav_bar">
             <img class="imgdrgns" src="imgdrgns.png" alt="Imagine Dragons">
-            <div class="middle_buttons">
+            <div class="middle_buttons" id="midbuttons">
             <ul class="responsive_button">
-            <li><a href="">TOUR</a></li>
-            <li><a href="">MERCH</a></li>
+            <li><a href="index1.html">TOUR</a></li>
+            <li><a href="index2.html">MERCH</a></li>
             <li><a href="">ABOUT US</a></li>
             <li><a href="">OUR MUSIC</a></li>
             <li><a href="">STORE</a></li>
-            </div>
             </ul>
+            </div>
             <div class="socialmediaicons">
 
                   <span>
@@ -50,7 +50,7 @@
                   </span>
             </div>
         </nav>
-        <a href="" onclick="MyFunction()" class="nav_button active"> <i class="fa-solid fa-bars"></i> </a>
+        <button onclick="()=>{MyFunction()}" class="nav_button active"> <i class="fa-solid fa-bars"></i> </button>
 
     </header>
     <main>
