--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 <body>
     <header>
         <nav class="nav_bar">
+            <!-- displaying the main logo of the website -->
             <img class="imgdrgns" src="imgdrgns.png" alt="Imagine Dragons">
+            <!-- displaying list of buttons which includes the links -->
+            <!-- to different pages of the website -->
             <div class="middle_buttons" id="midbuttons">
             <ul class="responsive_button">
             <li><a href="index1.html">TOUR</a></li>
@@ -25,6 +28,8 @@
             <li><a href="">STORE</a></li>
             </ul>
             </div>
+            <!-- displaying list of icon buttons that takes you -->
+            <!-- to different social media places -->
             <div class="socialmediaicons">
 
                   <span>
@@ -50,10 +55,13 @@
                   </span>
             </div>
         </nav>
-        <button onclick="()=>{MyFunction()}" class="nav_button active"> <i class="fa-solid fa-bars"></i> </button>
+        <!-- toggle button that is used to show and hide navbar on smaller screens -->
+        <button  class="nav_button /*-active"> <i class="fa-solid fa-bars"></i> </button>
 
     </header>
     <main>
+        <!-- this section is about the mercury album and it includes the album cover -->
+        <!--with a brief discription of the album, its price, and a button to buy the album -->
         <div class="mercury-album">
             <div class="album-image">
                 <img src="mercuryact12.jpeg" alt="">
@@ -68,6 +76,8 @@
             </div>
         </div>
         <br>
+        <!-- this section is about the night visions tour event and it includes an image of the event -->
+        <!-- a brief description of the event, and a button to book the event-->
         <div class="night-visions">
             <div class="event-description">
                 <h4>Tour</h4>
@@ -83,6 +93,8 @@
             </div>
         </div>
         <br>
+        <!-- this section is about the night visions tour teaser, it includes a poster image -->
+        <!-- and a teaser video that are both related to the night visions album -->
         <div class="nightv-teaser">
             <div class="nv-poster">
                 <h1>Join Us Now!</h1>
