--- a/index1.html
+++ b/index1.html
@@ -14,7 +14,10 @@
 <body>
     <header>
         <nav class="nav_bar">
+            <!-- displaying the main logo of the website -->
             <img class="imgdrgns" src="imgdrgns.png" alt="Imagine Dragons">
+            <!-- displaying list of buttons which includes the links -->
+            <!-- to different pages of the website -->
             <div class="middle_buttons" id="midbuttons">
             <ul class="responsive_button">
             <li><a href="index1.html">TOUR</a></li>
@@ -24,6 +27,8 @@
             <li><a href="">STORE</a></li>
             </ul>
             </div>
+            <!-- displaying list of icon buttons that takes you -->
+            <!-- to different social media places -->
             <div class="socialmediaicons">
 
                   <span>
@@ -49,8 +54,13 @@
                   </span>
             </div>
         </nav>
-        <button onclick="()=>{MyFunction()}" class="nav_button active"> <i class="fa-solid fa-bars"></i> </button>
+        <!-- toggle button that is used to show and hide navbar on smaller screens -->
+        <button class="nav_button /*-active"> <i class="fa-solid fa-bars"></i> </button>
     </header>
+    <!-- tour schedule -->
+    <!-- this section is about the band's tour dates -->
+    <!-- each tour container had the tour date, location and venue of the concert -->
+    <!-- and a button that suggests the user can purchase tickets for that specific concert -->
     <main class="tour-container">
         <div class="tour1">
             <span>17 MAY 23</span>
