--- a/index2.html
+++ b/index2.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="design2.css">
 </head>
 <body>
+<!-- the div includes a left and right button that allows the user to navigate through the merchandise items -->
 <div class="wrapping">
-    <span onclick="()=>{Scroll()}" ><img id="bckbtn" src="merch_pictures/buttons/left.png" alt=""></span>
+    <button  ><img id="bckbtn" src="merch_pictures/buttons/left.png" alt=""></button>
+    <!-- collection of elements each one containing source of different merchandise products -->
+    <!-- which includes night visions exclusive merchanise, CDs, vinyl records, and etc.. -->
     <div class="merches">
         <div class="merch-images">
             <span><img src="merch_pictures/nightvisionsexclusive.jpeg" alt=""></span>
@@ -24,7 +27,7 @@
     </div>
     
 </div>
-<span onclick="()=>{Scroll()}" ><img id="nxtbtn" src="merch_pictures/buttons/right.png" alt=""></span>
+<button  ><img id="nxtbtn" src="merch_pictures/buttons/right.png" alt=""></button>
 </div>
 <script src="dynamic.js"></script>
 </body>
