--- a/pages/index.html
+++ b/pages/index.html
@@ -16,7 +16,7 @@
     <header>
         <nav class="nav_bar">
             <!-- displaying the main logo of the website -->
-            <img class="imgdrgns" src="imgdrgns.png" alt="Imagine Dragons">
+            <img class="imgdrgns" src="pictures/imgdrgns.png" alt="Imagine Dragons">
             <!-- displaying list of buttons which includes the links -->
             <!-- to different pages of the website -->
             <div class="middle_buttons" id="midbuttons">
